<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/questionbackground"
    tools:context=".BMIHeight">

    <TableLayout
        android:layout_width="309dp"
        android:layout_height="92dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="253dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/lemonada_bold"
                android:gravity="center"
                android:text="@string/howtallareyou"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/lemonada_bold"
                android:gravity="center"
                android:text="@string/height"
                android:textColor="@color/colorPrimaryDark" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="155dp"
        android:layout_height="72dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="178dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="200dip"
                android:autofillHints="@string/height_in_cm"
                android:background="@drawable/edit_text_border"
                android:gravity="center"
                android:hint="@string/height_cm"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/Next"
                android:layout_width="69dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#F2D093"
                android:fontFamily="@font/lemonada_bold"
                android:text="@string/Next"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>